php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #39816 configuration problem with apxs2filter
Submitted: 2006-12-13 13:56 UTC Modified: 2006-12-14 11:25 UTC
From: jiri dot reischig at ecn dot cz Assigned: iliaa (profile)
Status: Closed Package: Apache2 related
PHP Version: 5.2.0 OS: linux
Private report: No CVE-ID: None
 [2006-12-13 13:56 UTC] jiri dot reischig at ecn dot cz
Description:
------------
When php is compiled with "--with-apxs2filter" php settings from httpd.conf file are not used.
When php is compiled with "--with-apxs2" php settings from httpd.conf are used.
The problem is after php upgrade from 5.1.6 to 5.2.0.
I tested it on Apache 2.2.3 and 2.0.59.

Nothing was changed on test enviroment only new version of php.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-12-13 15:45 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 27 20:00:01 2026 UTC