Fixed bug #39816 (apxs2filter ignores httpd.conf & .htaccess php config settings).